welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: illegal start of simple expression
  if (){return true}
      ^Program:4: error: ')' expected but '}' found.
}
^