welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  if (){return true}
  else(){return false }
}


if (vuBiscuit()){avance()}